--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,9 @@
 <html lang="en-US">
+<head>
+    <link href="../styles.css" rel="stylesheet">
+</head>
 <body>
-<h1>Hello</h1>
+<h1>DOI Cite</h1>
 <form action="/doi" method="post">
     <label for="doi">DOI list</label>
     <br>
